# Spectral-Ball-Optimizer

./: README.md  pyproject.toml
figures_in_paper/loss/results/: merged_max_vio.csv
figures_in_paper/overhead/results/: results_20251223_161004.json  table_tol1e-02_20251223_161004.tex  table_tol1e-03_20251223_161004.tex
figures_in_paper/precision/results/: h_lambda_1024x2048_mean0.0_std0.02_n5.eps  h_lambda_1024x3072_mean0.0_std0.02_n5.eps  h_lambda_4096x1024_mean0.0_std0.02_n5.eps  h_lambda_8192x1024_mean0.0_std0.02_n5.eps  h_lambda_8x1024_mean0.0_std0.02_n5.eps
lambda_solver/: plot_results.py
megatron_scripts/Dense-1.7B/muonball/: muonball_1.8B_mupinit_muplr5e-3_wd0.1_hard_headfc1split.sh
megatron_scripts/ablations/eval/: eval_adamw_1.8B_muptinit_muplr5e-3_wd0.1_headfc1split.sh  eval_muonball_1.8B_mupinit_muplr5e-3_wd0.1_hard_headfc1split.sh  eval_muonw_1.8B_muptinit_muplr5e-3_wd0.1_headfc1split.sh  eval_spball_1.8B_mupinit_muplr5e-3_wd0.1_hard_headfc1split.sh
numeric_accuracy/: check_lambda.py
plot_figure/: plot_1.7B_val_loss.py  plot_lm_loss.py  plot_max_vio.py  plot_moe_val_loss.py  plot_val_loss.py  utils.py
plot_figures/: utils.py
plot_figures/loss/: plot_1.7B_val_loss.py  plot_1_7B_val_loss.py  plot_hsmax_attn.py  plot_hsrms_mlp.py  plot_lm_loss.py  plot_lrscaler_ablation.py  plot_max_vio.py  plot_module_ablation.py  plot_moe_val_loss.py  plot_mup.py  plot_mup_triple.py  plot_radius_ablation.py  plot_radius_activation.py  plot_radius_search.py  utils.py
plot_figures/overhead/: plot_results.py
plot_figures/precision/: check_lambda.py
(+69 files in other folders)
