[project]
name = "spectral-ball-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py>=2.3.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "triton>=3.4.0",
]

[[tool.uv.index]]
url = "https://bytedpypi.byted.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
